--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@types/react": "^17.0.14",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "@types/react-modal": "^3.12.1",
+    "@types/react-router-dom": "^5.1.8",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -79,13 +79,15 @@
     "Buffer": "0.0.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
-    "ethereumjs-util": "^7.1.2",
+    "ethereumjs-util": "^7.1.3",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
+    "normalize.css": "^8.0.1",
     "os-browserify": "^0.3.0",
     "plural-ru": "^2.0.2",
     "qs": "^6.10.1",
