--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "date-fns": "^2.23.0",
     "ethereumjs-util": "^7.1.3",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
