--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "homepage": "http://0xCrowd.github.io/crowd-ui",
   "scripts": {
     "start": "webpack serve -c webpack.dev.js",
     "start:prod": "npm run clean && npm run build && node build/server.js",
@@ -12,7 +13,9 @@
     "stylelint": "stylelint src/**/*{ts,tsx}",
     "tsc": "tsc --noEmit",
     "check": "npm run tsc && npm run eslint && npm run stylelint",
-    "prepare:husky": "husky install"
+    "prepare:husky": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "Karpukhov Artem",
   "license": "ISC",
@@ -52,6 +55,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^7.0.1",
