--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.14",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
@@ -97,6 +98,7 @@
     "plural-ru": "^2.0.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^4.0.0",
