--- a/package.json
+++ b/package.json
@@ -100,14 +100,13 @@
     "plural-ru": "^2.0.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
-    "react-alert": "^7.0.3",
-    "react-alert-template-mui": "^1.0.7",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.1.0",
     "tiny-skeleton-loader-react": "^1.1.6",
     "web3": "^1.6.0"
   },
