--- a/package.json
+++ b/package.json
@@ -86,9 +86,9 @@
     "Buffer": "0.0.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "ethereumjs-util": "^7.1.3",
+    "ethers": "^5.5.3",
     "express": "^4.17.1",
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
