--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@linaria/webpack-loader": "^3.0.0-beta.7",
     "@svgr/webpack": "^5.5.0",
     "@types/axios": "^0.14.0",
+    "@types/bignumber.js": "^5.0.0",
     "@types/config": "^0.0.39",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.172",
@@ -86,6 +87,7 @@
     "Buffer": "0.0.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "bignumber.js": "^9.0.2",
     "date-fns": "^2.23.0",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.3",
