--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "homepage": "http://0xCrowd.github.io/crowd-ui",
   "scripts": {
-    "start": "webpack serve -c webpack.dev.js",
-    "start:prod": "npm run clean && npm run build && node build/server.js",
-    "build": "webpack build -c webpack.prod.js && webpack build -c webpack.server.js",
+    "start": "env-cmd -f .env webpack serve -c webpack.dev.js",
+    "start:prod": "env-cmd -f .env npm run clean && npm run build && node build/server.js",
+    "build": "env-cmd -f .env webpack build -c webpack.prod.js && webpack build -c webpack.server.js",
     "clean": "rimraf build",
     "eslint": "eslint 'src/**/*{ts,tsx}'",
     "stylelint": "stylelint src/**/*{ts,tsx}",
@@ -52,6 +52,8 @@
     "config": "^3.3.6",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
+    "dotenv-webpack": "^7.1.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
@@ -89,12 +91,13 @@
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.23.0",
-    "ethereumjs-util": "^7.1.3",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.5.3",
     "express": "^4.17.1",
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
+    "metamask-react": "^2.4.0",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "normalize.css": "^8.0.1",
